fix NaN is now zero seeded for MACD, adx smoothing now has finite DX samples, flat RSI can no longer return infinite, various minor api usage corrections